# tap-plugin-yara

./: Cargo.toml  README.md
src/: lib.rs
