[package]
name = "tap-plugin-yara"
version = "0.1.0"
authors = ["Solal Jacob"]
edition = "2021"

[dependencies]
tap = { version="0.1.0", git="https://github.com/tap-ir/tap.git" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.1.2"
schemars = "0.8"
log = { version = "0.4", features = ["std", "serde"] }
rusoto_core = "0.42.0"
rusoto_s3 = "0.42.0"
tokio = { version = "0.2", features = ["full"] }
async-std = "1.5.0"
anyhow = { version = "1.0.40"}
